trunk/Archive2/4b/11fdc277be737a/output
main.cpp: In function 'int main(int, const char**)':
main.cpp:175:1: error: a function-definition is not allowed here before '{' token
 {
 ^
main.cpp:688:1: error: expected '}' at end of input
 } //END function listEmployeeIDs
 ^
